2022-10-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tmac]: Fix Savannah #63112 (1/3).

	* tmac/latin9.tmac: Replace characters that ISO Latin-1 has but
	Latin-9 doesn't.  Map characters that ISO Latin-9 has and
	Latin-1 doesn't to their numeric code points.

2022-10-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	[tmac]: Regression-test Savannah #63112 (1/3).

	* tmac/tests/latin9_works: Do it.
	* tmac/tmac.am (tmac_TESTS): Run test.

2022-10-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Refactor to parallelize logic in
	similar routines; namely, those handling escape sequences that
	accept newlines as argument delimiters.

2022-10-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Fix inconsistencies in handling of
	escape sequences that accept newlines as delimiters.  Some threw
	spurious warnings as in Savannah #63011; others failed to treat
	a newline-terminated escape sequence also as the ending of an
	input line.
	(do_name_test, do_zero_width): Suppress spurious warning.
	(do_zero_width, do_width, do_special): Synthesize newline to
	terminate input line.

2022-10-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/\
	some_escapes_accept_newline_delimiters.sh: Add test cases for
	`\A` and test formatted output of escape sequences, not just the
	absence of diagnostics from permitted use of newlines as
	argument delimiters.

2022-09-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/libs/libdriver/input.cpp (do_file): Make use of
	positioning commands before the first page is started fatal
	errors; they suggest ill-formed input.  The 'p' command
	clobbers the vertical position anyway.  (See
	https://bugs.debian.org/421437 for discussion.)

2022-09-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/pdf.tmac: Add inclusion guard; if a `pdfmark` macro is
	already defined, skip inclusion of this file.  Unfortunately